tests/ui/imports/issue-114682-3.stderr
error[E0599]: no method named `ext` found for type `u8` in the current scope
  --> $DIR/issue-114682-3.rs:20:7
   |
LL |         fn ext(&self) {}
   |            --- the method is available for `u8` here
...
LL |     a.ext();
   |       ^^^ method not found in `u8`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `SettingsExt` which provides `ext` is implemented but not in scope; perhaps you want to import it
   |
LL + use auto::SettingsExt;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
